qa-bked/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:
    cert-manager.io/cluster-issuer: "bke-ci-ucc"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - qbkedtest.virtorch.brown.edu
      secretName: qbkedtest-tls
  rules:
  - host: qbkedtest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bkextest
            port: 
              number: 8080
